test/corpus/assignments.txt
================================================================================
assignment simple
================================================================================

$foo = 123
--------------------------------------------------------------------------------

(manifest
  (assignment
    (variable
      (identifier
        (name)))
    (operator)
    (integer)))

================================================================================
assignment function
================================================================================
$foo = match(123)
--------------------------------------------------------------------------------

(manifest
  (assignment
    (variable
      (identifier
        (name)))
    (operator)
    (function_call
      (function
        (name))
      (integer))))

================================================================================
assignment  float
================================================================================
$foo = 123
--------------------------------------------------------------------------------

(manifest
  (assignment
    (variable
      (identifier
        (name)))
    (operator)
    (integer)))

================================================================================
assignment local variable
================================================================================
$_foo = 123
--------------------------------------------------------------------------------

(manifest
  (assignment
    (variable
      (name))
    (operator)
    (integer)))

================================================================================
assignment reference
================================================================================
$foo = Test['asdf']
--------------------------------------------------------------------------------

(manifest
  (assignment
    (variable
      (identifier
        (name)))
    (operator)
    (reference
      (identifier
        (name))
      (string
        (string_content)))))

================================================================================
assignment absolute scope
================================================================================

$::foo = 123
--------------------------------------------------------------------------------

(manifest
  (assignment
    (variable
      (identifier
        (name)))
    (operator)
    (integer)))
