test/corpus/binary_expression.txt
================================================================================
binary expression
================================================================================

true or false

123 > 456

'asdf' == 'boo'
--------------------------------------------------------------------------------

(manifest
  (binary
    (true)
    (operator)
    (false))
  (binary
    (integer)
    (operator)
    (integer))
  (binary
    (string
      (string_content))
    (operator)
    (string
      (string_content))))
