test/corpus/class_in_class.txt
================================================================================
class in class
================================================================================

class bar {
  class { 'foo': } # class call

  class baz {} # nested class
}

--------------------------------------------------------------------------------

(manifest
  (resource_declaration
    (identifier
      (name))
    (body
      (resource_call
        (identifier)
        (resource_title
          (string_content)))
      (comment)
      (resource_declaration
        (identifier
          (name))
        (body))
      (comment))))
