test/corpus/comments.txt
================================================================================
comments
================================================================================

# anything else here should be ignored

$foo = $bar # comment

# https:/foo.bar/

--------------------------------------------------------------------------------

(manifest
  (comment)
  (assignment
    (variable
      (identifier
        (name)))
    (operator)
    (variable
      (identifier
        (name))))
  (comment)
  (comment))
