test/corpus/compositions.txt
================================================================================
compositions include
================================================================================

include ::base::linux
--------------------------------------------------------------------------------

(manifest
  (include
    (identifier
      (name)
      (name))))

================================================================================
compositions require list
================================================================================
require base::linux, apache
--------------------------------------------------------------------------------

(manifest
  (require
    (identifier
      (name)
      (name))
    (identifier
      (name))))

================================================================================
compositions include array
================================================================================

include ['base::linux', 'apache']

--------------------------------------------------------------------------------

(manifest
  (include
    (string_array
      (string
        (string_content))
      (string
        (string_content)))))

================================================================================
compositions include from variable
================================================================================

include $my_classes
--------------------------------------------------------------------------------

(manifest
  (include
    (variable
      (identifier
        (name)))))

================================================================================
compositions contain
================================================================================

contain ::test::asdf::bar
--------------------------------------------------------------------------------

(manifest
  (contain
    (identifier
      (name)
      (name)
      (name))))
