test/corpus/element_reference.txt
================================================================================
element reference array
================================================================================

$array[1]

--------------------------------------------------------------------------------

(manifest
  (element_reference
    (variable
      (identifier
        (name)))
    (integer)))

================================================================================
element reference hash
================================================================================

$hash['foo']

--------------------------------------------------------------------------------

(manifest
  (element_reference
    (variable
      (identifier
        (name)))
    (string
      (string_content))))

================================================================================
element reference array of arrays
================================================================================

$array[1][2]

--------------------------------------------------------------------------------

(manifest
  (element_reference
    (variable
      (identifier
        (name)))
    (integer)
    (integer)))

================================================================================
element reference hash of hashes
================================================================================

$facts['os']['release']['major']

--------------------------------------------------------------------------------

(manifest
  (element_reference
    (variable
      (identifier
        (name)))
    (string
      (string_content))
    (string
      (string_content))
    (string
      (string_content))))

================================================================================
element reference array slice
================================================================================

$array[1,2]

--------------------------------------------------------------------------------

(manifest
  (element_reference
    (variable
      (identifier
        (name)))
    (integer)
    (integer)))
