test/corpus/heredoc.txt
================================================================================
heredoc static
================================================================================
$a = @(END)
This is the text that gets assigned to $a.
And this too.
END
--------------------------------------------------------------------------------

(manifest
  (assignment
    (variable
      (identifier
        (name)))
    (operator)
    (heredoc
      (heredoc_start)
      (heredoc_body))))

================================================================================
heredoc with interpolation and escape
================================================================================
$gitconfig = @("GITCONFIG"/L)
    [user]
        name = ${displayname}
        email = ${email}
    [color]
        ui = true
    [alias]
        lg = "log --pretty=format:'%C(yellow)%h%C(reset) %s \
    %C(cyan)%cr%C(reset) %C(blue)%an%C(reset) %C(green)%d%C(reset)' --graph"
        wdiff = diff --word-diff=color --ignore-space-at-eol \
    --word-diff-regex='[[:alnum:]]+|[^[:space:][:alnum:]]+'
    [merge]
        defaultToUpstream = true
    [push]
        default = upstream
    | GITCONFIG
--------------------------------------------------------------------------------

(manifest
  (assignment
    (variable
      (identifier
        (name)))
    (operator)
    (heredoc
      (heredoc_start)
      (heredoc_body
        (interpolation
          (variable
            (identifier
              (name))))
        (interpolation
          (variable
            (identifier
              (name))))))))

================================================================================
heredoc with short interpolation
================================================================================
$gitconfig = @("GITCONFIG"/L)
    name = ${displayname}
    | GITCONFIG
--------------------------------------------------------------------------------

(manifest
  (assignment
    (variable
      (identifier
        (name)))
    (operator)
    (heredoc
      (heredoc_start)
      (heredoc_body
        (interpolation
          (variable
            (identifier
              (name))))))))

================================================================================
heredoc short
================================================================================
$g = @(Foo)
foobar
next
Foo
--------------------------------------------------------------------------------

(manifest
  (assignment
    (variable
      (identifier
        (name)))
    (operator)
    (heredoc
      (heredoc_start)
      (heredoc_body))))

================================================================================
heredoc empty
================================================================================

$g = @(empty)
empty
--------------------------------------------------------------------------------

(manifest
  (assignment
    (variable
      (identifier
        (name)))
    (operator)
    (heredoc
      (heredoc_start)
      (heredoc_body))))
