test/corpus/identifier.txt
================================================================================
identifier top
================================================================================

::asdf {'asdf':}

--------------------------------------------------------------------------------

(manifest
  (resource_call
    (identifier
      (name))
    (resource_title
      (string_content))))

================================================================================
identifier top with package
================================================================================

::asdf::asdf {'asdf':}

--------------------------------------------------------------------------------

(manifest
  (resource_call
    (identifier
      (identifier
        (name))
      (name))
    (resource_title
      (string_content))))

================================================================================
identifier relative with package
================================================================================

asdf::asdf {'asdf':}

--------------------------------------------------------------------------------

(manifest
  (resource_call
    (identifier
      (name)
      (name))
    (resource_title
      (string_content))))

================================================================================
identifier relative
================================================================================

asdf {'asdf':}

--------------------------------------------------------------------------------

(manifest
  (resource_call
    (identifier
      (name))
    (resource_title
      (string_content))))

================================================================================
identifier newline separated
================================================================================

  include nginx

  file { "id":    }
--------------------------------------------------------------------------------

(manifest
  (include
    (identifier
      (name)))
  (resource_call
    (identifier
      (name))
    (resource_title
      (string_content))))
