test/corpus/if_statement.txt
================================================================================
if statement basic
================================================================================

if true { } elsif false { } else { }

--------------------------------------------------------------------------------

(manifest
  (if
    (true)
    (body)
    (elsif
      (false)
      (body))
    (else
      (body))))

================================================================================
if statement unless
================================================================================

unless true { } else { }

--------------------------------------------------------------------------------

(manifest
  (unless
    (true)
    (body)
    (else
      (body))))

================================================================================
if statement with group
================================================================================

if (true or false) or 1 { }

--------------------------------------------------------------------------------

(manifest
  (if
    (command_binary
      (expression_group
        (binary
          (true)
          (operator)
          (false)))
      (integer))
    (body)))
