test/corpus/node.txt
================================================================================
node
================================================================================

node 'foo.bar' { }

node default  { }

node /asdf.*/{}

--------------------------------------------------------------------------------

(manifest
  (node
    (string
      (string_content))
    (body))
  (node
    (body))
  (node
    (regex)
    (body)))
