test/corpus/reference.txt
================================================================================
reference
================================================================================

Group[$foo::group]
--------------------------------------------------------------------------------

(manifest
  (reference
    (identifier
      (name))
    (variable
      (identifier
        (name)
        (name)))))
